chore(): change boolean value, change authenticated

--- a/todo.txt
+++ b/todo.txt
@@ -19,4 +19,6 @@
     let newCapitals = ["Buenos Aires", "Mexico"]
     let concatCapitals = [...capitals, ...newCapitals] // spread vs rest
 
-    
+chore: ()
+fix:
+feat: 
